clusters/homelab/apps/skate-streamer-reciever/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skate-streamer-reciever
  namespace: skate-streamer-reciever
spec:
  selector:
    app: skate-streamer-reciever
  ports:
    - port: 80
      targetPort: 9090
